<resources>
    <string name="app_name">Meu Primeiro APP</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">LUIZ \nCLAUDIO</string>


    <string name="ContaPassos_txt_topo">Passos</string>
    <string name="ContaPassos_action_aumentar">aumentar</string>
    <string name="ContaPassos_action_diminuir">diminuir</string>
    <string name="ContaPassos_number_contador">00</string>
    <string name="ContaPassos_action_zerar">zerar</string>
</resources>
